kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: wkndr
  name: wkndr
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wkndr
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wkndr
    spec:
      containers:
      - command:
        - /var/lib/wkndr/release/wkndr.mruby.x11
        - --server=/var/lib/wkndr/public
        - --no-client
        #image: wkndr:latest
        image: polly-registry:23443/polly-registry/wkndr:wkndr-1c9a28ffbfca8c5784107eab0e33a3a0518153f8
        imagePullPolicy: IfNotPresent
        name: wkndr
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 100M
          requests:
            cpu: 10m
            memory: 100M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/tmp/chroot/home
          name: chroot-home
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/tmp/chroot-home
          type: DirectoryOrCreate
        name: chroot-home
...
---
apiVersion: v1
kind: Service
metadata:
  name: wkndr-service
spec:
  ports:
  - name: app
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: wkndr
  sessionAffinity: None
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wkndr-computer-vhost
spec:
  rules:
  - host: wkndr.computer
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: wkndr-service
              port:
                number: 8000
...
